fix for bug 70972 (object element does not respect CSS width and height for non-plugins) r= peter lubczynski sr= attinasi